--- a/2024/deno.json
+++ b/2024/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
     "day-1": "deno run -A ./day-1/main.ts",
-    "day-2": "deno run -A ./day-2/main.ts"
+    "day-2": "deno run -A ./day-2/main.ts",
+    "day-3": "deno run -A ./day-3/main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
