--- a/2024/deno.json
+++ b/2024/deno.json
@@ -3,7 +3,8 @@
     "day-1": "deno run -A ./day-1/main.ts",
     "day-2": "deno run -A ./day-2/main.ts",
     "day-3": "deno run -A ./day-3/main.ts",
-    "day-4": "deno run -A ./day-4/main.ts"
+    "day-4": "deno run -A ./day-4/main.ts",
+    "day-5": "deno run -A ./day-5/main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
